--- a/css/style.css
+++ b/css/style.css
@@ -406,7 +406,6 @@ h6 {
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
-
 }
 
 .solution_tab_heading ul li:after {
@@ -995,4 +994,40 @@ footer {
   font-weight: 400;
   line-height: 154%;
 }
+
+#header {
+  background-color: #1b1b1a;
+}
+
+.sticky {
+  background-color: #fff !important;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 99999999;
+}
+
+.header_logo img.stickylogo {
+  display: none;
+}
+
+.sticky img.stickylogo {
+  display: inline-block;
+}
+
+.sticky img.normal {
+  display: none;
+}
+
+.sticky .header_link ul li:first-child a {
+  color: #1b1b1a;
+  border-color: #1b1b1a;
+}
+
+.sticky .header_link ul li:first-child a:hover {
+  color: #fff;
+  border-color: #fff;
+}
+
 /* -- footer area end -- */
