--- a/css/responsive.css
+++ b/css/responsive.css
@@ -134,10 +134,6 @@ Medium Screen - Others
     max-width: 620px;
   }
 
-  .drive_right {
-    height: 281px;
-  }
-
   .drive_right img {
     width: 100%;
     height: 100%;
@@ -240,6 +236,18 @@ Medium Screen - Others
 
   .hero_left {
     max-width: 100%;
+    height: 540px;
+  }
+  
+  .hero_right {
+    position: relative;
+  }
+  
+  .hero_right img {
+    position: absolute;
+    right: 0;
+    bottom: 15px;
+      
   }
 
   .headerButton {
@@ -564,9 +572,7 @@ Medium Screen - Others
     width: 100%;
   }
 
-  #hero {
-    height: 540px;
-  }
+  
 }
 
 @media screen and (max-width: 639px) {
@@ -577,6 +583,10 @@ Medium Screen - Others
     --m: 20px;
     --xl: 50px;
     --xxl: 50px;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   .container {
@@ -596,8 +606,9 @@ Medium Screen - Others
     font-weight: 700;
   }
 
-  #hero {
-    padding-top: 20px;
+  #hero_section {
+    padding-top: 30px;
+    margin-top: -5px;
   }
 
   .hero_left h1 {
@@ -616,7 +627,7 @@ Medium Screen - Others
 
   .hero_right img {
     position: relative;
-    top: 20px;
+    top: 3rem;
   }
 
   .hero_section {
